--- a/server/dhcpd.conf.5
+++ b/server/dhcpd.conf.5
@@ -2026,7 +2026,7 @@ The \fIcheck-secs-byte-order\fR statement
 .PP
 .B check-secs-byte-order \fIflag\fB;\fR
 .PP
-When \fIcheck-secs-byte-order\fR is enabled, the server will check for DHPCv4
+When \fIcheck-secs-byte-order\fR is enabled, the server will check for DHCPv4
 clients that do the byte ordering on the secs field incorrectly. This field
 should be in network byte order but some clients get it wrong. When this
 parameter is enabled the server will examine the secs field and if it looks
