[master] Changes prefix-length-mode default to be "prefer"
    Merges in rt45615.

--- a/server/dhcpd.conf.5
+++ b/server/dhcpd.conf.5
@@ -2922,11 +2922,11 @@ available prefix.
 .PP
 2. prefer - The server will offer the first available prefix with the same
 length as the requested length.  If none are found then it will offer the
-first available prefix of any length.
+first available prefix of any length.  This is the default behavior.
 .PP
 3. exact - The server will offer the first available prefix with the same
 length as the requested length.  If none are found, it will return a status
-indicating no prefixes available.  This is the default behavior.
+indicating no prefixes available.
 .PP
 4. minimum - The server will offer the first available prefix with the same
 length as the requested length.  If none are found, it will return the first
