--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
 			     Version 4.4.1
-			    28 February 2018
+			    05 June 2019
 
 			      README FILE
 
@@ -704,7 +704,7 @@ bug reports are more likely to get handled more quickly overall.
 	  This assumes that it's the dhcp server you're debugging, and
 	  that the core file is in dhcpd.core.
 
-Please see https://www.isc.org/software/dhcp/ for details on how to subscribe
+Please see https://www.isc.org/dhcp/ for details on how to subscribe
 to the ISC DHCP mailing lists.
 
 			       HISTORY
